# points-air-api

./: .gitignore  LICENSE  README.md  parcs_sentiers.py  pyproject.toml
.github/workflows/: python-app.yml
points_air/: __init__.py  api.py  data.py  especes.py  plateaux.json  plateaux.py  sentinelle_liste_sp.csv  user.py  ville-de-repentigny_parcs.json  ville-de-repentigny_sentiers.json  ville-de-rimouski_parcs.json  ville-de-rimouski_sentiers.json  ville-de-shawinigan_parcs.json  ville-de-shawinigan_sentiers.json  villes.json  villes.py  villes.txt
tests/: test_api.py  test_data.py  test_main.py  test_plateaux.py  test_villes.py
